# fhirpack

./: .bumpversion.cfg  .env.example  .gitattributes  .gitignore  .gitlab-ci.yml  .python-version  .readthedocs.yaml  .tool-versions  .zenodo.json  AUTHORS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE.txt  MANIFEST.in  Pipfile  README.md  VERSION  classes_fhirdrill.dot  classes_fhirdrill.gml  classes_fhirdrill.graphml  classes_fhirpack.dot  classes_fhirpack.gml  classes_fhirpack.graphml  conftest.py  docker-compose.env  docker-compose.yml  packages_fhirdrill.dot  packages_fhirdrill.gml  packages_fhirdrill.graphml  packages_fhirpack.dot  packages_fhirpack.gml  packages_fhirpack.graphml  pyproject.toml  setup.cfg  setup.py  tox.ini
.gitlab/issue_templates/: bug.md  default.md
.gitlab/merge_request_templates/: default.md
assets/: numpydoc.template  profiles.list  resources.list
docs/: conf.py  index.md  index.rst  requirements.txt
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/doctrees/api/: fhirdrill.custom.doctree  fhirdrill.custom.extraction.doctree  fhirdrill.custom.load.doctree  fhirdrill.custom.transformation.doctree  fhirdrill.doctree  fhirdrill.extraction.doctree  fhirdrill.load.doctree  fhirdrill.transformation.doctree  modules.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/_sources/api/: fhirdrill.custom.extraction.rst.txt  fhirdrill.custom.load.rst.txt  fhirdrill.custom.rst.txt  fhirdrill.custom.transformation.rst.txt  fhirdrill.extraction.rst.txt  fhirdrill.load.rst.txt  fhirdrill.rst.txt  fhirdrill.transformation.rst.txt  modules.rst.txt
docs/_build/html/api/: fhirdrill.custom.extraction.html  fhirdrill.custom.html  fhirdrill.custom.load.html  fhirdrill.custom.transformation.html  fhirdrill.extraction.html  fhirdrill.html  fhirdrill.load.html  fhirdrill.transformation.html  modules.html
docs/_static/: custom.css  my_theme.css
docs/api/: fhirdrill.rst
docs/examples/: .env.example  minimal.ipynb  mr.ipynb  usage.ipynb
docs/examples/data/: README.md
docs/notebooks/: minimal.ipynb  usage.ipynb
docs/pages/: api.md  base.md  cli.md  contributing.md  examples.md  extractor.md  general.md  installation.md  loader.md  transformer.md  tutorials.md
examples/: .env.example  README.md  minimal.ipynb  usage.ipynb
logs/: README.md
src/fhirdrill/: __init__.py  auth.py  base.py  base_test.py  cli.py  cli_test.py  config.py  config_test.py  conftest.py  constants.py  decorators.py  drill.py  exceptions.py  utils.py  utils_test.py
src/fhirdrill.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/fhirdrill/custom/: __init__.py  base.py
src/fhirdrill/custom/extraction/: __init__.py  base.py  sample.py  ship.py
src/fhirdrill/custom/load/: __init__.py  base.py  sample.py
src/fhirdrill/custom/transformation/: __init__.py  base.py  sample.py
src/fhirdrill/data/: supported.list
src/fhirdrill/data/config/: test.fhir.org.env
src/fhirdrill/data/logs/: README.md
src/fhirdrill/extraction/: __init__.py  base.py  base_test.py  condition.py  condition_test.py  diagnosticreport.py  endpoint.py  episodeofcare.py  familymemberhistory.py  imagingstudy.py  list.py  medicationadministration.py  medicationrequest.py  observation.py  patient.py  patient_test.py  sample.py
src/fhirdrill/load/: __init__.py  base.py  condition.py  observation.py  patient.py
src/fhirdrill/transformation/: __init__.py  base.py  base_test.py  condition.py  observation.py  patient.py  utils.py
src/fhirpack/: __init__.py  auth.py  base.py  base_test.py  cli.py  cli_test.py  config.py  config_test.py  conftest.py  constants.py  decorators.py  exceptions.py  pack.py  utils.py  utils_test.py
src/fhirpack.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/fhirpack/custom/: __init__.py  base.py  utils.py
src/fhirpack/custom/extraction/: __init__.py  base.py  sample.py  ship.py
src/fhirpack/custom/load/: __init__.py  base.py  sample.py
src/fhirpack/custom/transformation/: __init__.py  base.py  sample.py
src/fhirpack/data/: numpydoc.template  prettyColumnSelection.json  resourceTextElementMapping.json  resources.list
src/fhirpack/data/config/: hapi.fhir.org.env  test.fhir.org.env
src/fhirpack/data/logs/: README.md
src/fhirpack/extraction/: __init__.py  base.py  base_test.py  condition.py  condition_test.py  diagnosticreport.py  documentreference.py  encounter.py  endpoint.py  episodeofcare.py  familymemberhistory.py  imagingstudy.py  list.py  medication.py  medicationadministration.py  medicationrequest.py  observation.py  patient.py  patient_test.py  procedure.py  sample.py  utils.py
src/fhirpack/load/: __init__.py  base.py  condition.py  observation.py  patient.py
src/fhirpack/transformation/: __init__.py  base.py  base_test.py  condition.py  observation.py  patient.py
tests/: README.md  __init__.py  conftest.py  data.py  test_sample.py
tests/data/: fhirdrill.utils.keys.forPatients.00.out  fhirpack.extraction.base.getFromFiles.observation.00.in  fhirpack.extraction.base.getFromFiles.patient.00.in  fhirpack.extraction.base.getFromFiles.patients.00.in  fhirpack.observations.00.in  fhirpack.utils.valuesForKeys.patient.00.in
